v0.10.2/_sources/generated/statsmodels.discrete.discrete_model.DiscreteResults.rst.txt
statsmodels.discrete.discrete\_model.DiscreteResults
====================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: DiscreteResults

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         DiscreteResults.aic
         DiscreteResults.bic
         DiscreteResults.bse
         DiscreteResults.conf_int
         DiscreteResults.cov_params
         DiscreteResults.f_test
         DiscreteResults.fittedvalues
         DiscreteResults.get_margeff
         DiscreteResults.initialize
         DiscreteResults.llf
         DiscreteResults.llnull
         DiscreteResults.llr
         DiscreteResults.llr_pvalue
         DiscreteResults.load
         DiscreteResults.normalized_cov_params
         DiscreteResults.predict
         DiscreteResults.prsquared
         DiscreteResults.pvalues
         DiscreteResults.remove_data
         DiscreteResults.resid_response
         DiscreteResults.save
         DiscreteResults.set_null_options
         DiscreteResults.summary
         DiscreteResults.summary2
         DiscreteResults.t_test
         DiscreteResults.t_test_pairwise
         DiscreteResults.tvalues
         DiscreteResults.wald_test
         DiscreteResults.wald_test_terms



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         DiscreteResults.use_t

