v0.15.0/_sources/generated/statsmodels.discrete.discrete_model.DiscreteResults.rst.txt
statsmodels.discrete.discrete\_model.DiscreteResults
====================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: DiscreteResults
   :exclude-members: conf_int,cov_params,f_test,get_distribution,get_influence,get_margeff,get_prediction,info_criteria,initialize,load,normalized_cov_params,predict,remove_data,save,score_test,set_null_options,summary,summary2,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~DiscreteResults.conf_int
      ~DiscreteResults.cov_params
      ~DiscreteResults.f_test
      ~DiscreteResults.get_distribution
      ~DiscreteResults.get_influence
      ~DiscreteResults.get_margeff
      ~DiscreteResults.get_prediction
      ~DiscreteResults.info_criteria
      ~DiscreteResults.initialize
      ~DiscreteResults.load
      ~DiscreteResults.normalized_cov_params
      ~DiscreteResults.predict
      ~DiscreteResults.remove_data
      ~DiscreteResults.save
      ~DiscreteResults.score_test
      ~DiscreteResults.set_null_options
      ~DiscreteResults.summary
      ~DiscreteResults.summary2
      ~DiscreteResults.t_test
      ~DiscreteResults.t_test_pairwise
      ~DiscreteResults.wald_test
      ~DiscreteResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~DiscreteResults.aic
      ~DiscreteResults.bic
      ~DiscreteResults.bse
      ~DiscreteResults.fittedvalues
      ~DiscreteResults.im_ratio
      ~DiscreteResults.llf
      ~DiscreteResults.llnull
      ~DiscreteResults.llr
      ~DiscreteResults.llr_pvalue
      ~DiscreteResults.prsquared
      ~DiscreteResults.pvalues
      ~DiscreteResults.resid_pearson
      ~DiscreteResults.resid_response
      ~DiscreteResults.tvalues
      ~DiscreteResults.use_t
   
   
   